@@ -1,45 +1,25 @@
 ---
-title: Upgrade naar AEM 6.5 Forms op OSGi
-description: U kunt een directe upgrade uitvoeren van AEM 6.1 Forms, AEM 6.2 Forms en LiveCycle ES4 SP1 naar AEM 6.3 Forms.
+title: Upgrade naar AEM 6.5 Forms LTS op OSGi
+description: U kunt een directe upgrade uitvoeren van AEM 6.5.22.0 Forms naar AEM 6.5 Forms LTS.
 content-type: reference
-products: SG_EXPERIENCEMANAGER/6.3/FORMS
-topic-tags: installing
-geptopics: SG_AEMFORMS/categories/jee
-role: Admin,User
+role: Admin, User
 solution: Experience Manager, Experience Manager Forms
-feature: Adaptive Forms,AEM Forms on OSGi, AEM Forms Upgrade
+feature: Adaptive Forms, AEM Forms on OSGi, AEM Forms Upgrade
 exl-id: 9233d4b7-441c-4cbd-86f8-2c52b99c3330
-source-git-commit: c3e9029236734e22f5d266ac26b923eafbe0a459
+source-git-commit: bc91f56d447d1f2c26c160f5c414fd0e6054f84c
 workflow-type: tm+mt
-source-wordcount: '923'
+source-wordcount: '836'
 ht-degree: 0%
 
 ---
 
-# Upgrade naar AEM 6.5 Forms op OSGi {#upgrade-to-aem-forms-osgi}
+# Upgrade naar AEM 6.5 Forms LTS op OSGi {#upgrade-to-aem-forms-osgi}
 
-U kunt een directe upgrade uitvoeren van AEM 6.3 Forms of AEM 6.4 Forms naar AEM 6.5 Forms.
+Aan [ verbetering van AEM 6.5 aan AEM 6.5 LTS ](/help/sites-deploying/upgrade.md), verbetering aan AEM 6.5.22.0 Forms of later. Een directe upgrade van AEM 6.5.22.0 naar AEM 6.5 Forms LTS wordt ondersteund.
 
-De directe verbeteringsweg van **AEM 6.0 Forms, AEM 6.1 Forms**, en **AEM 6.2 Forms** aan AEM 6.5 Forms is niet beschikbaar. Voer een tussenliggende [ verbetering aan AEM 6.2 Forms ](https://helpx.adobe.com/experience-manager/6-2/forms/using/upgrade.html) uit, [ verbetering aan AEM 6.3 Forms ](https://helpx.adobe.com/experience-manager/6-3/forms/using/upgrade.html), of [ verbetering aan AEM 6.4 Forms ](/help/forms/using/upgrade.md) en dan verbetering van AEM 6.3 Forms, of AEM 6.4 Forms aan AEM 6.5 Forms.
+Als u AEM 6.0 Forms, AEM 6.1 Forms, AEM 6.2 Forms, AEM 6.3 Forms, AEM 6.4 Forms of AEM 6.5 Forms gebruikt, is een directe upgrade naar AEM 6.5 Forms LTS niet beschikbaar. Voor gedetailleerde verbeteringswegen, verwijs naar de [ documentatie van de Wegen van de Verbetering ](/help/forms/using/upgrade.md).
 
-Ga als volgt te werk om een upgrade uit te voeren van AEM 6.3 Forms of AEM 6.4 Forms naar AEM 6.5 Forms:
-
-1. Upgrade de bestaande AEM-versie naar AEM 6.5. De stappen worden hieronder weergegeven:
-
-   1. Installeer het nieuwste servicepakket en de nieuwste patches voor AEM 6.3 Forms of AEM 6.4 Forms. Voor details, zie [ de Hub van de Controle van AEM ](https://helpx.adobe.com/experience-manager/aem-releases-updates.html).
-   1. Bereid de broninstantie voor de verbetering voor. Voor gedetailleerde stappen, zie [ Bevorderend aan AEM 6.5 ](/help/sites-deploying/upgrade.md).
-   1. Download [ AEM 6.5 QuickStart ](/help/sites-deploying/deploy.md#getting%20the%20software).
-   1. **(Unix/Linux-Gebaseerde installaties slechts)** als u UNIX of Linux als onderliggend werkend systeem gebruikt, open het eindvenster, navigeer aan de omslag die crx-quickstart bevat, en stel het volgende bevel in werking:
-
-      `chmod -R 755 ../crx-quickstart`
-
-   1. Upgrade uw AEM-exemplaar naar AEM 6.3. Voor geleidelijke instructies, zie [ Bevorderend aan AEM 6.5 ](/help/sites-deploying/upgrade.md).
-
-      Wacht voordat u verdergaat met de volgende stappen tot de berichten ServiceEvent REGISTERED en ServiceEvent UNREGISTERED niet meer worden weergegeven in het bestand &lt;crx-repository>/error.log.
-
-      >[!NOTE]
-      >
-      >Nadat de server is gestart, blijven enkele AEM Forms-bundels in de installatiestatus staan. Het aantal bundels kan voor elke installatie variëren. U kunt de status van deze pakketten veilig negeren. De bundels zijn vermeld in https://&#39; [ server ]:[ haven ]&#39;/system/console/.
+Na upgrade naar het servicepack AEM Forms 6.5.22.0 voert u de volgende stappen uit om te upgraden naar AEM 6.5 LTS Forms:
 
 1. Installeer het AEM Forms-invoegtoepassingspakket. De stappen worden hieronder weergegeven:
 
@@ -49,20 +29,25 @@ Ga als volgt te werk om een upgrade uit te voeren van AEM 6.3 Forms of AEM 6.4 F
       1. Selecteer **[!UICONTROL Forms]** in de vervolgkeuzelijst **[!UICONTROL Solution]** .
       1. Selecteer de versie en typ voor het pakket. U kunt de optie **[!UICONTROL Search Downloads]** ook gebruiken om de resultaten te filteren.
    1. Selecteer de pakketnaam die van toepassing is op het besturingssysteem, selecteer **[!UICONTROL Accept EULA Terms]** en selecteer **[!UICONTROL Download]** .
+   1. Open [ Manager van het Pakket ](/help/sites-administering/package-manager.md) en klik **[!UICONTROL Upload Package]** om het pakket te uploaden.
    1. Open [ Manager van het Pakket ](https://experienceleague.adobe.com/docs/experience-manager-65-lts/administering/contentmanagement/package-manager.html) en klik **[!UICONTROL Upload Package]** om het pakket te uploaden.
    1. Selecteer het pakket en klik op **[!UICONTROL Install]** .
 
-      U kunt het pakket ook downloaden gebruikend de directe verbinding die in [ wordt vermeld versies van AEM Forms ](https://helpx.adobe.com/aem-forms/kb/aem-forms-releases.html) artikel.
+      U kunt het pakket ook downloaden gebruikend de directe verbinding die in [ wordt vermeld versies van AEM Forms ](https://experienceleague.adobe.com/en/docs/experience-manager-release-information/aem-release-updates/forms-updates/aem-forms-releases) artikel.
 
-      >[!NOTE]
-      >
-      >Nadat het pakket is geïnstalleerd, wordt u gevraagd om het AEM-exemplaar opnieuw te starten. **stop niet onmiddellijk de server.** Voordat u de AEM Forms-server stopt, wacht u tot de berichten ServiceEvent REGISTERED en ServiceEvent UNREGISTERED niet meer worden weergegeven in het bestand &lt;crx-repository>/error.log en het logbestand stabiel is. Houd er rekening mee dat een aantal pakketten in de installatiestatus kunnen blijven staan. U kunt de status van deze verpakkingen veilig negeren.
+      Nadat het pakket is geïnstalleerd, wordt u gevraagd om het AEM-exemplaar opnieuw te starten. **stop niet onmiddellijk de server.** Voordat u de AEM Forms-server stopt, wacht u tot de berichten ServiceEvent REGISTERED en ServiceEvent UNREGISTERED niet meer worden weergegeven in het bestand &lt;crx-repository>/error.log en het logbestand stabiel is. Houd er rekening mee dat een aantal pakketten in de installatiestatus kunnen blijven staan. U kunt de status van deze verpakkingen veilig negeren.
+
+
+      **begin de instantie van AEM met de volgende extra bevel-lijn JVM parameters** opnieuw:
+      `--add-opens java.base/java.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED`
+
+      Als de server via een script of service wordt gestart, moet u de server overeenkomstig bijwerken zodat het bovenstaande wordt opgenomen zodat deze ook van kracht zijn nadat de server opnieuw is gestart.
 
 1. Start de AEM-instantie opnieuw.
 
    >[!NOTE]
    >
-   U wordt aangeraden de SDK opnieuw op te starten met de opdracht &#39;Ctrl + C&#39;. Het opnieuw opstarten van de AEM SDK met behulp van alternatieve methoden, bijvoorbeeld het stoppen van Java-processen, kan leiden tot inconsistenties in de AEM-ontwikkelomgeving.
+   > U wordt aangeraden de SDK opnieuw op te starten met de opdracht &#39;Ctrl + C&#39;. Het opnieuw opstarten van de AEM SDK met behulp van alternatieve methoden, bijvoorbeeld het stoppen van Java-processen, kan leiden tot inconsistenties in de AEM-ontwikkelomgeving.
 
 1. Nainstallatie uitvoeren.
 
@@ -108,3 +93,7 @@ Ga als volgt te werk om een upgrade uit te voeren van AEM 6.3 Forms of AEM 6.4 F
       * `https://'[server]:[port]'/crx/packmgr`
       * `https://'[server]:[port]'/crx/de`
       * `https://'[server]:[port]'/aem/forms.html/content/dam/formsanddocuments`
+
+   >[!NOTE]
+   >
+   >In AEM 6.4 Forms is de structuur van crx-repository veranderd. Als u een upgrade uitvoert van 6.3 Forms naar AEM 6.5 Forms, gebruikt u de gewijzigde paden voor aanpassing die u opnieuw maakt. Voor de volledige lijst van veranderde wegen, zie [ de Herstructurering van de Bewaarplaats van Forms in AEM ](https://experienceleague.adobe.com/en/docs/experience-manager-65/content/implementing/deploying/restructuring/forms-repository-restructuring-in-aem-6-5).
